syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.hse.spb.roguelike";
option java_outer_classname = "RoguelikeProto";
option objc_class_prefix = "RL";

package roguelike;

service ConnectionSetUpper {
    rpc TryToConnect (ConnectionRequest) returns (ConnectionReply) {}
}

message ConnectionRequest {
    string sessionName = 1;
}

message ConnectionReply {
    string playerId = 1;
}